--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
         </button>
       </div>
     </div>
+    <div id="product-details" class="w-50 mx-auto">
+
+    </div>
     <div class="row">
       <div class="col-md-9 col-lg-9 col-sm-7">
         <div id="all-products" class="">
