--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet" />
 </head>
 
-<body>
+<body class="bg-light">
   <header></header>
   <main class="main">
+    <!-- search box -->
     <div>
       <div class="search-box d-flex ">
         <input id="input-field" class="search-field" type="text" placeholder="search" />
@@ -29,9 +30,11 @@
         </button>
       </div>
     </div>
+    <!-- single product details -->
     <div id="product-details" class="w-50 mx-auto">
 
     </div>
+    <!-- all products details -->
     <div class="row">
       <div class="col-md-9 col-lg-9 col-sm-7">
         <div id="all-products" class="">
